--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: stockvibes
     env: python
-    buildCommand: ""
-    startCommand: gunicorn "app:create_app()"
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn run:app
     envVars:
       - key: FINNHUB_API_KEY
         value: your_api_key_here  # You can also set this via the Render dashboard
